{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "ca64fe84-c74d-40e2-a254-4e2d55448b76",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "79ca23e0-b718-4ed9-8164-596922438d22",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SimpleAttack",
                    "type": "Button",
                    "id": "0c299a0f-851a-44c4-9f84-a0aebd2bd830",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleAttack",
                    "type": "Button",
                    "id": "f936c1e1-6ff5-4e69-ab23-01295de21413",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a21acd6-0e0c-4bda-8280-30fbce0ffd20",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SimpleAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63507ba4-a939-4875-9f8e-22b2e2c7709a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "4c6a6902-df67-4fad-b7fc-415a0d678e14",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6ee768c8-acdb-4c1f-ac00-0152f57f9dde",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "852bc4b9-dd9a-4357-8c46-6ca5d4abf9f4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9d96cf7e-0ee6-4bfa-b79e-5fe26c50007c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6bead56b-f137-4e74-9394-e23ab3bd568d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}